Se actualiza la versión de la imagen en el archivo docker-compose

--- a/WebPagos.csproj
+++ b/WebPagos.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>41bb2c80-eec4-4bfe-a551-aa52c67b1f15</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
