--- a/Docker-compose-sonarqube.yml
+++ b/Docker-compose-sonarqube.yml
@@ -22,9 +22,15 @@ services:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
       - POSTGRES_DB=sonar
+    volumes:
+      - postgres-db:/var/lib/postgresql/data
     networks:
       - sonarnet
 
 networks:
   sonarnet:
     driver: bridge
+
+volumes:
+  postgres-db:
+    external: true
